# slackbuilder

./: ISSUES.md  LICENSE  README.md  index.html  kanban.md  package-lock.json  package.json  vite.config.ts
src/: App.tsx  styles.css  version.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  delete_app.rs  lib.rs  main.rs
src/components/: EditorTabs.tsx  HoverTooltip.tsx  ResizableSplitPane.tsx  TitleBar.tsx
src/features/ai/: AiChatPanel.tsx  PendingEditCard.tsx  applyCommand.test.ts  applyCommand.ts  chatMarkdown.test.ts  chatMarkdown.tsx
src/features/copy/: copyToSlack.ts
src/features/editor/: EditorToolbar.tsx  SlackEditor.tsx  copyButtonLayout.test.ts  copyButtonLayout.ts
src/features/settings/: SettingsModal.test.tsx  SettingsModal.tsx  deleteSlackbuilder.test.ts  deleteSlackbuilder.ts
src/hooks/: useResizablePanel.ts
src/lib/: slackFormatShortcuts.ts
src/lib/ai/: applyEdits.move.test.ts  applyEdits.test.ts  applyEdits.ts  applyEditsHelpers.test.ts  applyEditsHelpers.ts  editPosition.test.ts  editPosition.ts  formatApiError.test.ts  formatApiError.ts  parseAskResponse.test.ts  parseEditResponse.test.ts  parseEditResponse.ts  systemPrompt.ts  types.test.ts  types.ts
src/lib/slack/: escape.ts  mrkdwnToTipTap.test.ts  mrkdwnToTipTap.ts  tipTapToBlocks.test.ts  types.ts  (+7 more)
src/store/: appStore.cancel.test.ts  appStore.history.test.ts  appStore.projects.test.ts  appStore.streaming.test.ts  appStore.ts  persistence.test.ts  persistence.ts  streamControllers.ts
(+7 files in other folders)
