[package]
name = "slackbuilder"
version = "1.0.1"
description = "Slackbuilder: AI-powered Slack message composer"
authors = ["Slackbuilder"]
edition = "2021"

[lib]
name = "slackbuilder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clipboard-rs = "0.2"
